--- a/configure.in
+++ b/configure.in
@@ -7,6 +7,7 @@ AM_MAINTAINER_MODE
 
 # Required Packages
 m4_define([glib_minimum_version], [2.8.0])
+m4_define([gtk+-3.0_minimum_version], [0.27.0])
 m4_define([xmms2_minimum_version], [0.6])
 m4_define([xmms2_client_glib_minimum_version], [0.6])
 m4_define([libnotify_minimum_version], [0.4.1])
@@ -21,6 +22,7 @@ AC_HEADER_STDC
 dnl check for mandatory modules
 PKG_CHECK_MODULES(XMMS2NOTIFY,
     [glib-2.0 >= glib_minimum_version
+     gtk+-3.0 >= gtk+-3.0_minimum_version
         xmms2-client >= xmms2_minimum_version
         xmms2-client-glib >= xmms2_client_glib_minimum_version
         libnotify >= libnotify_minimum_version])
